Fix z-index in CSS

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -43,6 +43,7 @@
 }
 
 .nav {
+  z-index: 999;
   ul {
     display: flex;
   }
